# resume_rag_assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  dependency-review.yml  pr-quality.yml
data/: canonical-profile.md
scripts/: build_chunks.py  build_embeddings.py
src/: main.py
src/app/: __init__.py  config.py  main.py  schemas.py
src/app/services/: rag_service.py
tests/: test_main.py
worker/: README.md  biome.json  package-lock.json  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
worker/data/precompute/: resume_chunks.json  resume_embeddings.json
worker/src/: cache.ts  constants.ts  index.ts  prompts.ts  response.ts  retrieval.ts  services.ts  types.ts
